@@ -10,6 +10,7 @@ DIST debianutils_2.28.5.tar.gz 138784 RMD160 ed52e3c7e18d9bd9c91b2275caf45c86e87
 DIST debianutils_2.29.tar.gz 139191 RMD160 31e2ee74c0d9f07b1c35048780ae26214a32f3fd SHA1 8314a85b1d1897afb79ce1689444d5df343b1d4d SHA256 34968e4cfc32c768ee8b39c5b6008a750baad99d4a1c003383157ca42c481e10
 DIST debianutils_2.30.tar.gz 139274 RMD160 2c5efa8d1573763f75f456327166f43d6989a8b4 SHA1 eab0ce4eb26d7997f2bbc240bb3639e90fe7ab19 SHA256 d62e98fee5b1a758d83b62eed8d8bdec473677ff782fed89fc4ae3ba3f381401
 DIST debianutils_2.31.tar.gz 139842 RMD160 68c9ad89953a782a0ed2dfc67894898e2b08a8d1 SHA1 98ab58fd934abe94913077b23c1861487a6c5727 SHA256 557ca67e5aaa4d2f3bb6c9aee2e0919405510870c3d38dcd9fd77b73998a0476
+DIST debianutils_3.1.1.tar.gz 123487 RMD160 66edb8ac9edbb9b1af43ba07d39b131323588ce0 SHA1 cb49b650af3de2d42b653db3b225197704633dbe SHA256 bbc8cc790535b16d8621cb46bd1367a9403737793b87cd9db4a39e85fce71a7e
 DIST debianutils_3.1.tar.gz 131938 RMD160 ce71f41d2dc63bd76efb6dbaa17a3d3497706ccf SHA1 bbd3dad0177c85e93a61e4ca02324cecc73d0d4f SHA256 41fb5f117fe273a671d3ebc5dbd9d240a084d717c73349cec7c4d7fa91cb0d2d
 EBUILD debianutils-2.28.2.ebuild 1348 RMD160 862bffcda3c2b9d7ab6b2a25a6b442b7654f4075 SHA1 97ac76238f47738f378731175208ecf1ad921256 SHA256 0d1e6bf9d41ecce4608dac49669d0177507a639fb326f3709208571ca9515ff3
 EBUILD debianutils-2.28.4.ebuild 1347 RMD160 bf382c2e4a79165471566c7efba074774f6ee972 SHA1 71b77e15975019bb2a604fa1c114edead13aca6c SHA256 91de08c24387015f8eb2d8f046927bb0a997d12185095730cbf667e7c8197d03
@@ -17,6 +18,7 @@ EBUILD debianutils-2.28.5.ebuild 1506 RMD160 38a1cf1feb1a773abef3f0f76f67229b27f
 EBUILD debianutils-2.29.ebuild 1500 RMD160 443d3c20ae536f021322d4ae83f25e294340d3c8 SHA1 04323db2488b5a3ef66ad3ab5af7caad70f86bf2 SHA256 8e89232ceee54a1d33d13747c42ee687d982e98e6c65060e1cf57bf2b5996351
 EBUILD debianutils-2.30.ebuild 1521 RMD160 b3f0bd1da8c02070f39c0d1106711c674c38db3a SHA1 0c37cc6a2623baaf9722ed025d93df3b68a41d99 SHA256 f36d61c602c49a634473d65eef05d0a891a270d5797149cb93d14b507903f8eb
 EBUILD debianutils-2.31.ebuild 1532 RMD160 8721340c0a8e2467fe36ba7d6ab63ad7585244fd SHA1 10efdce9c1e35af437c265dcd21ccee2c52b759b SHA256 2515d40666ace2a3a2a5e80413de80938058cc77733d5abbd1125dcf4f16077c
+EBUILD debianutils-3.1.1.ebuild 1372 RMD160 31b110759f1662a0a1fd38d56853ad2657fef563 SHA1 7203ec0c256fde0aebe324ee3b0d062072f4b230 SHA256 20b98e4f75e780bb93ad786932b6e69234e147572b3365604d30872ec4f94898
 EBUILD debianutils-3.1.ebuild 1348 RMD160 90fce75ecbd4b1ed6611cd27c023e843e1018157 SHA1 f3980a56bea61f448d190246b8af947f40a6b6c1 SHA256 de6e9e03332eeed2ac5b13ad832bad1f8c3908061a49eec8aaea18bb63c0723b
-MISC ChangeLog 17347 RMD160 53b3adb6731f72f7b976e4070e135d36fc0dfc94 SHA1 f872c247af1fcdc02a61055dc377a321c09023c1 SHA256 d3d843acb6a09c2e80295257405c42dacf0948f824fd22cb5b151a2d1317d71a
+MISC ChangeLog 17472 RMD160 3738db9839b2ebf35ccd107c124fd701794a0c45 SHA1 467b34d89991ceaafbe37eb67819eb5ac24519e2 SHA256 9c17c384af137b119a62db70cf8bd89632413f9ccb54515b56e46b6715894896
 MISC metadata.xml 164 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 SHA1 9c213f5803676c56439df3716be07d6692588856 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92
