@@ -1,6 +1,11 @@
 # ChangeLog for sys-apps/debianutils
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/debianutils/ChangeLog,v 1.125 2009/05/02 16:13:32 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/debianutils/ChangeLog,v 1.126 2009/05/03 15:56:49 jer Exp $
+
+*debianutils-3.1.1 (03 May 2009)
+
+  03 May 2009; Jeroen Roovers <jer@gentoo.org> +debianutils-3.1.1.ebuild:
+  Version bump.
 
 *debianutils-3.1 (02 May 2009)
 
